--- a/Front-Taller/src/componentes/Sidebar.css
+++ b/Front-Taller/src/componentes/Sidebar.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
 }
+
 body {
   width: 100vw;
   height: 100vh;
@@ -41,6 +42,8 @@ body {
   transition: width 0.3s ease; /* Transición suave para el ancho del sidebar */
   border-right: 1px #4d606e solid;
   padding-top: 15px;
+  overflow-y: auto; /* Habilitar el scroll vertical cuando el contenido excede la altura */
+  overflow-x: hidden; /* Evitar el scroll horizontal */
 }
 
 .sidebar .sidebar-position {
