--- a/Front-Taller/src/modulos/usuario/usuarios.css
+++ b/Front-Taller/src/modulos/usuario/usuarios.css
@@ -88,3 +88,76 @@ h1 {
   margin-left: 10px;
 }
 
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1050;
+}
+
+.success-modal {
+  position: fixed;
+  top: 20%; /* Coloca el modal 20% desde el borde superior */
+  left: 50%;
+  transform: translateX(-50%); /* Solo centrado horizontalmente */
+  z-index: 1050;
+  width: 80%;
+  max-width: 400px;
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  padding: 1.5rem;
+  text-align: center;
+}
+
+.success-animation {
+  font-size: 2em;
+  color: #28a745;
+  margin-bottom: 1.5rem;
+  animation: success-bounce 0.4s ease;
+}
+
+.delete-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 1rem; /* Espacio entre los botones */
+}
+
+@keyframes success-bounce {
+  0% { transform: scale(0.8); opacity: 0; }
+  50% { transform: scale(1.1); opacity: 1; }
+  100% { transform: scale(1); opacity: 1; }
+}
+
+.icon-button {
+  cursor: pointer;
+  font-size: 1.2rem;
+  margin-right: 10px;
+}
+
+.actions-cell {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.edit-icon {
+  color: #007bff; /* Color azul para el ícono de editar */
+}
+
+.edit-icon:hover {
+  color: #0056b3; /* Color más oscuro al pasar el cursor */
+}
+
+.delete-icon {
+  color: #dc3545; /* Color rojo para el ícono de eliminar */
+}
+
+.delete-icon:hover {
+  color: #a71d2a; /* Color más oscuro al pasar el cursor */
+}
