--- a/Front-Taller/src/componentes/dashboard.css
+++ b/Front-Taller/src/componentes/dashboard.css
@@ -9,10 +9,12 @@
   flex: 1;
   transition: margin-left 0.3s ease;
   margin-left: 80px; /* Ancho del sidebar cerrado */
+  padding-top: 70px; /* Ajuste para dejar espacio al navbar */
 }
 
 .dashboard-container--shift {
   margin-left: 250px; /* Ancho del sidebar abierto */
+  padding-top: 70px; /* Ajuste para dejar espacio al navbar */
 }
 
 /* Contenido principal */
